<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.TaskFragment"
    tools:showIn="@layout/fragment_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/base">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/prompt_category"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/item_primary_text_size" />

            <Spinner
                android:id="@+id/spn_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:listitem="@layout/list_item_category" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_defer"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/item_primary_text_size" />

            <EditText
                android:id="@+id/et_defer_until"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="none"
                android:textIsSelectable="false"
                android:textSize="@dimen/item_primary_text_size"
                tools:ignore="TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prompt_deadline"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/item_primary_text_size" />

            <EditText
                android:id="@+id/et_deadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="none"
                android:textIsSelectable="false"
                android:textSize="@dimen/item_primary_text_size"
                tools:ignore="TextFields" />

        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>